--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <h1>Vietnamese Tone Trainer</h1>
 
   <button id="play">🔊 Play sound</button>
+  <button id="next">⏭️ Next</button>
 
   <div id="buttons"></div>
 
