--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <body>
 
   <h1>Vietnamese Tone Trainer</h1>
+  <text>Please note, all sounds you hear end in 'n'</text>
 
   <button id="play">🔊 Play sound</button>
   <button id="next">⏭️ Next</button>
